--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HTML 5 done with Phaser-CE",
   "main": "src/server.js",
   "scripts": {
-    "test": "nodemon src/server/web.js & nodemon src/server/game.js"
+    "test": "nodemon src/server/web.js && nodemon src/server/game.js"
   },
   "repository": {
     "type": "git",
